# streamlit-echarts

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FAQ.md  GEMINI.md  MANIFEST.in  README.md  demo_app.py  example.py  justfile  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.claude/agents/: criticizing-local-changes.md  fixing-pr.md  reviewing-current-branch.md  simplifying-current-branch.md
.claude/commands/: criticizing-local-changes.md  fixing-pr.md  reviewing-current-branch.md  simplifying-current-branch.md
.claude/hooks/: stop_check.sh
.claude/skills/developing-with-streamlit/: SKILL.md
.claude/skills/developing-with-streamlit/scripts/: discover.py
.claude/skills/developing-with-streamlit/skills/building-streamlit-chat-ui/: SKILL.md
.claude/skills/developing-with-streamlit/skills/building-streamlit-custom-components-v2/: SKILL.md
.gemini/agents/: criticizing-local-changes.md
.gemini/commands/: criticizing-local-changes.toml
.gemini/skills/developing-with-streamlit/: SKILL.md
.github/workflows/: enforce-pre-commit.yml  playwright.yml  python-tests.yml  ts-tests.yml
demo_handlers/: click_handler.js
docs/: roadmap.yaml
docs/plans/: REMOUNT.md  modern-jscode.md  smart-interactions-v1+2.md  smart-interactions-v1.md  smart-interactions-v2.md
e2e_playwright/: basic_chart.py  basic_chart_test.py  conftest.py  selection.py  selection_test.py  tab_resize.py  tab_resize_test.py  test-requirements.txt
e2e_playwright/shared/: __init__.py  git_utils.py
examples/: app.py  app_animate.py  app_dark_theme.py  app_embed_pyecharts.py  app_extensions.py  app_js.py  app_map.py  app_pyecharts.py  app_theme.py
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: EchartsChart.tsx  index.tsx  utils.js
streamlit_echarts/: __init__.py  pyproject.toml
streamlit_echarts/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
streamlit_echarts/frontend/src/: EchartsChart.tsx  brush-clear.test.ts  index.css  index.test.ts  index.ts  index.tsx  parsers.test.ts  parsers.ts  selection.test.ts  selection.ts  setupTests.ts  utils.js  utils.test.ts  utils.ts
tests/: conftest.py  test_init.py
(+16 files in other folders)
