[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-echarts"
version = "0.6.0"
description = "A Streamlit component to display ECharts."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Fanilo Andrianasolo", email = "contact@andfanilo.com" }]
dependencies = ["streamlit >= 1.51"]

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[tool.setuptools.packages.find]
include = ["streamlit_echarts*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
streamlit_echarts = ["frontend/build/**/*", "pyproject.toml"]
