[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-echarts"
version = "0.6.0"
description = "A Streamlit component to display ECharts."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Fanilo Andrianasolo", email = "contact@andfanilo.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ["streamlit >= 1.53"]

[project.urls]
Homepage = "https://github.com/andfanilo/streamlit-echarts"
"Source Code" = "https://github.com/andfanilo/streamlit-echarts"
"Bug Tracker" = "https://github.com/andfanilo/streamlit-echarts/issues"

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[tool.setuptools.packages.find]
include = ["streamlit_echarts*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
streamlit_echarts = ["frontend/build/**/*", "pyproject.toml"]
